SAK-20961 override purepoms javadoc plugin with <excludePackageNames> for commented out test classes.
git-svn-id: https://source.sakaiproject.org/svn/common/trunk@99551 66ffb92e-73f9-0310-93c1-f5514f145a0a